# DatAI

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  dependencies.py  main.py
src/database/: dependencies.py
src/search/: routes.py  schemas.py
