[tool.poetry]
name = "datai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
sqlalchemy = "^2.0.25"
mysql-connector = "^2.2.9"
asyncmy = "^0.2.9"
openai = "^1.9.0"
llama-index = "^0.9.34"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
bandit = "^1.7.6"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
